Added Daisy Ui and Toaster

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "js-cookie": "^3.0.5",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "daisyui": "^5.0.43",
     "tailwindcss": "^4"
   }
 }
